# Market_Researcher_AgenticAI

./: .gitignore  AgentTeam.py  DashTest.py  DashTest2.py  DashTest3.py  MessageStructure.py  README.md  TrendChart.py  TrendChart2.py  agent_protocol.py  cookies_fixed.json  dashboard.py  main.py  pipeline_output.json  pyproject.toml  requirements.txt  scraped_docs.json  serverTest.py
.cache/: tickers.json
API/: Agent_setup.py  MongoDBCon.py  pipeline.py  server.py
API/Middleware/: auth.py
API/models/: models.py
API/vectorstore/: chroma.sqlite3
Competitor_Comparison_Agent/agent4/: __init__.py
Data_Scraper_IR_Agent/: ClientMCP.py  DSIR2.py  DataScraperIR.py  MCPtest.py  MultiRunner.py  agentTeting.py  ir_tools.py  scraped_docs.json
FRONTEND/: package-lock.json  package.json
FRONTEND/src/: App.jsx
Market_Researcher_Agent/: Market_Researcher_Agent.phy.py
RAG_agent/: Rag_Agent.py
SocialMedia_Trend_Agent/: SocialAgent.py  cookies.json  snscrape_patch.py  test.py
Trend_Analyzer_Agent/: Trend_Analyzer_Agent.py
indexdir/: _MAIN_1.toc  _MAIN_13.toc  _MAIN_4.toc  _MAIN_5.toc  _MAIN_6.toc  _MAIN_7.toc  _MAIN_8.toc
pre_testing/: Kasuni.ipynb  Linal.ipynb  Thushan.ipynb  Tiyani.ipynb
storage/index/: MAIN_07vvugw2uoje3c9j.seg  MAIN_1sq62a5fcm4qv95s.seg  MAIN_3h55h3f635yqud92.seg  MAIN_4bnqwunxpw6jksy6.seg  MAIN_5vwrvg03udtaunpx.seg  MAIN_5wxznidlwvdsk3d9.seg  MAIN_64w6loxxccesw9pl.seg  MAIN_7hl2ls3pydixyve6.seg  _MAIN_1.toc  _MAIN_3.toc  (+33 more)
utills/: cleaning.py  extractUtills.py  scope_utils.py  ta_helpers.py  ticker_cache.py
vectorStore/: chroma_manager.py
(+41 files in other folders)
