[project]
name = "market-researcher-agenticai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai[tools]>=0.165.1",
    "notebook>=7.4.5",
    "duckduckgo-search",
    "beautifulsoup4",
    "lxml",
    "httpx",
    "pydantic-settings",
    "tqdm",
    "requests>=2.32.5",
    "html5lib>=1.1",
    "python-dotenv>=1.1.1",
    "whoosh>=2.7.4",
    "trafilatura>=1.6.1",
    "streamlit>=1.49.0",
    "plotly>=6.3.0",
    "pandas>=2.3.1",
    "numpy>=2.3.2",
    "pydantic>=2.11.7",
    "tenacity>=9.1.2",
]
